crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@141.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO pht2 SELECT i, i, to_char(i/50, 'FM0000') FROM generate_series(0, 599, 3) i;"
---
InsertStmt@0..88
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..16
    Ident@12..16 "pht2"
  Whitespace@16..17 " "
  SelectStmt@17..87
    Select@17..23 "SELECT"
    Whitespace@23..24 " "
    ResTarget@24..25
      ColumnRef@24..25
        Ident@24..25 "i"
    Ascii44@25..26 ","
    Whitespace@26..27 " "
    ResTarget@27..28
      ColumnRef@27..28
        Ident@27..28 "i"
    Ascii44@28..29 ","
    Whitespace@29..30 " "
    ResTarget@30..52
      FuncCall@30..52
        Ident@30..37 "to_char"
        Ascii40@37..38 "("
        AExpr@38..42
          ColumnRef@38..39
            Ident@38..39 "i"
          Ascii47@39..40 "/"
          AConst@40..42
            Iconst@40..42 "50"
        Ascii44@42..43 ","
        Whitespace@43..44 " "
        AConst@44..52
          Sconst@44..52 "'FM0000'"
    Ascii41@52..53 ")"
    Whitespace@53..54 " "
    From@54..58 "FROM"
    Whitespace@58..59 " "
    RangeFunction@59..87
      List@59..84
        FuncCall@59..84
          Ident@59..74 "generate_series"
          Ascii40@74..75 "("
          AConst@75..76
            Iconst@75..76 "0"
          Ascii44@76..77 ","
          Whitespace@77..78 " "
          AConst@78..81
            Iconst@78..81 "599"
          Ascii44@81..82 ","
          Whitespace@82..83 " "
          AConst@83..84
            Iconst@83..84 "3"
      Ascii41@84..85 ")"
      Whitespace@85..86 " "
      Alias@86..87
        Ident@86..87 "i"
  Ascii59@87..88 ";"

