crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@167.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE prt1_l_p2 PARTITION OF prt1_l FOR VALUES FROM (250) TO (500) PARTITION BY LIST (c);
---
CreateStmt@0..96
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..22
    Ident@13..22 "prt1_l_p2"
  Whitespace@22..23 " "
  Partition@23..32 "PARTITION"
  Whitespace@32..33 " "
  Of@33..35 "OF"
  Whitespace@35..36 " "
  RangeVar@36..42
    Ident@36..42 "prt1_l"
  Whitespace@42..43 " "
  For@43..46 "FOR"
  Whitespace@46..47 " "
  Values@47..53 "VALUES"
  Whitespace@53..54 " "
  PartitionBoundSpec@54..72
    From@54..58 "FROM"
    Whitespace@58..59 " "
    Ascii40@59..60 "("
    AConst@60..63
      Iconst@60..63 "250"
    Ascii41@63..64 ")"
    Whitespace@64..65 " "
    To@65..67 "TO"
    Whitespace@67..68 " "
    Ascii40@68..69 "("
    AConst@69..72
      Iconst@69..72 "500"
  Ascii41@72..73 ")"
  Whitespace@73..74 " "
  PartitionSpec@74..94
    Partition@74..83 "PARTITION"
    Whitespace@83..84 " "
    By@84..86 "BY"
    Whitespace@86..87 " "
    Ident@87..91 "LIST"
    Whitespace@91..92 " "
    Ascii40@92..93 "("
    PartitionElem@93..94
      Ident@93..94 "c"
  Ascii41@94..95 ")"
  Ascii59@95..96 ";"

