crates/pg_syntax/tests/snapshots/postgres_regress/partition_join@170.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE prt1_l_p3 PARTITION OF prt1_l FOR VALUES FROM (500) TO (600) PARTITION BY RANGE (b);
---
CreateStmt@0..97
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..22
    Ident@13..22 "prt1_l_p3"
  Whitespace@22..23 " "
  Partition@23..32 "PARTITION"
  Whitespace@32..33 " "
  Of@33..35 "OF"
  Whitespace@35..36 " "
  RangeVar@36..42
    Ident@36..42 "prt1_l"
  Whitespace@42..43 " "
  For@43..46 "FOR"
  Whitespace@46..47 " "
  Values@47..53 "VALUES"
  Whitespace@53..54 " "
  PartitionBoundSpec@54..72
    From@54..58 "FROM"
    Whitespace@58..59 " "
    Ascii40@59..60 "("
    AConst@60..63
      Iconst@60..63 "500"
    Ascii41@63..64 ")"
    Whitespace@64..65 " "
    To@65..67 "TO"
    Whitespace@67..68 " "
    Ascii40@68..69 "("
    AConst@69..72
      Iconst@69..72 "600"
  Ascii41@72..73 ")"
  Whitespace@73..74 " "
  PartitionSpec@74..95
    Partition@74..83 "PARTITION"
    Whitespace@83..84 " "
    By@84..86 "BY"
    Whitespace@86..87 " "
    Range@87..92 "RANGE"
    Whitespace@92..93 " "
    Ascii40@93..94 "("
    PartitionElem@94..95
      Ident@94..95 "b"
  Ascii41@95..96 ")"
  Ascii59@96..97 ";"

